--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1314,6 +1314,8 @@ build.json @home-assistant/supervisor
 /tests/components/ukraine_alarm/ @PaulAnnekov
 /homeassistant/components/unifi/ @Kane610
 /tests/components/unifi/ @Kane610
+/homeassistant/components/unifi_pdu/ @alkca
+/tests/components/unifi_pdu/ @alkca
 /homeassistant/components/unifiled/ @florisvdk
 /homeassistant/components/unifiprotect/ @AngellusMortis @bdraco
 /tests/components/unifiprotect/ @AngellusMortis @bdraco
