--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -357,6 +357,7 @@ aiosyncthing==0.5.1
 aiotractive==0.5.5
 
 # homeassistant.components.unifi
+# homeassistant.components.unifi_pdu
 aiounifi==49
 
 # homeassistant.components.vlc_telnet
