--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -332,6 +332,7 @@ aiosyncthing==0.5.1
 aiotractive==0.5.5
 
 # homeassistant.components.unifi
+# homeassistant.components.unifi_pdu
 aiounifi==49
 
 # homeassistant.components.vlc_telnet
